crates/bevy_ecs/compile_fail/tests/ui/system_query_set_iter_lifetime_safety.stderr
error[E0499]: cannot borrow `queries` as mutable more than once at a time
  --> tests/ui/system_query_set_iter_lifetime_safety.rs:11:14
   |
7  |     let mut q2 = queries.p0();
   |                  ------- first mutable borrow occurs here
...
11 |     let q1 = queries.p1();
   |              ^^^^^^^ second mutable borrow occurs here
...
16 |     b.0 = a.0
   |     - first borrow later used here

error[E0499]: cannot borrow `queries` as mutable more than once at a time
  --> tests/ui/system_query_set_iter_lifetime_safety.rs:24:18
   |
20 |     let q1 = queries.p1();
   |              ------- first mutable borrow occurs here
...
24 |     let mut q2 = queries.p0();
   |                  ^^^^^^^ second mutable borrow occurs here
...
29 |     b.0 = a.0;
   |           --- first borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0499`.
